--- a/index.html
+++ b/index.html
@@ -30,25 +30,43 @@
         </nav>
 
         <div class="main-container">
-
-
-            <div class="content-box">
-                <div class="info-paragraphs">
-                    <h1 class="header">About Me</h1>
-                    <img class="profile-image" src="../Basic-Portfolio-2/Assets/IMG_3319 - Copy.JPG" alt="Myself">
-                    <p class="p-index">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam ad hic debitis ipsum id explicabo laboriosam,
-                        laudantium eum iste aspernatur perferendis harum repellat quidem molestiae provident aliquid accusantium
-                        nulla! Excepturi?</p>
-                    <p class="p-index">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam ad hic debitis ipsum id explicabo laboriosam,
-                        laudantium eum iste aspernatur perferendis harum repellat quidem molestiae provident aliquid accusantium
-                        nulla! Excepturi?</p>
-                    <p class="p-index">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam ad hic debitis ipsum id explicabo laboriosam,
-                        laudantium eum iste aspernatur perferendis harum repellat quidem molestiae provident aliquid accusantium
-                        nulla! Excepturi?</p>
+            <div class="row">
+                <div class="content-box">
+                    <div class="info-paragraphs">
+                        <h1 class="header">About Me</h1>
+                        <img class="profile-image" src="http://via.placeholder.com/200x225">
+                        <p class="p-index">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam ad hic debitis ipsum id explicabo
+                            laboriosam, laudantium eum iste aspernatur perferendis harum repellat quidem molestiae provident
+                            aliquid accusantium nulla! Excepturi?</p>
+                        <p class="p-index">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam ad hic debitis ipsum id explicabo
+                            laboriosam, laudantium eum iste aspernatur perferendis harum repellat quidem molestiae provident
+                            aliquid accusantium nulla! Excepturi?</p>
+                        <p class="p-index">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam ad hic debitis ipsum id explicabo
+                            laboriosam, laudantium eum iste aspernatur perferendis harum repellat quidem molestiae provident
+                            aliquid accusantium nulla! Excepturi?</p>
+                    </div>
                 </div>
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-12">
+                <div class="logo_container">
+                 <a href="#"><img class="logo_1" src="../Basic-Portfolio-2/Assets/linkedin_logo_round.png" alt=""></a>
+                 <a href="#"><img class="logo_2" src="../Basic-Portfolio-2/Assets/gitlab_logo.png" alt=""></a>
+                 <a href="#"><img class="logo_3" src="../Basic-Portfolio-2/Assets/Github_logo.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <div class="container">
+                Copyright &copy;
+            </div>
+        </footer>
+        <!-- <div id="bg">
+        <img src="../Basic-Portfolio-2/Assets/yosemite.jpg" alt="">
+    </div> -->
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -57,6 +75,7 @@
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
+
 </body>
 
 </html>
