changed color theme, likely to be changed again

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12">
+            1<div class="col-md-12">
                 <div class="logo_container">
                  <a href="#"><img class="logo_1" src="../Basic-Portfolio-2/Assets/linkedin_logo_round.png" alt=""></a>
-                 <a href="#"><img class="logo_2" src="../Basic-Portfolio-2/Assets/gitlab_logo.png" alt=""></a>
-                 <a href="#"><img class="logo_3" src="../Basic-Portfolio-2/Assets/Github_logo.png" alt=""></a>
+                 <a href="#"><img class="logo_2 logo-2" src="../Basic-Portfolio-2/Assets/gitlab_logo.png" alt=""></a>
+                 <a href="#"><img class="logo_3" src="../Basic-Portfolio-2/Assets/github_logo_2.png" alt=""></a>
                 </div>
             </div>
         </div>
