changed footer, added bg image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <nav class="navbar navbar-expand-lg navbar-light  ">
             <a class="navbar-brand " href="#">Cortland Taylor</a>
             <ul class="navbar-nav ml-auto"></ul>
             <a class="nav-item nav-link" href="index.html">Home</a>
@@ -34,7 +34,7 @@
                 <div class="content-box">
                     <div class="info-paragraphs">
                         <h1 class="header">About Me</h1>
-                        <img class="profile-image" src="http://via.placeholder.com/200x225">
+                        <img class="profile-image" src="../Basic-Portfolio-2/Assets/IMG_3319 - Copy.JPG">
                         <p class="p-index">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam ad hic debitis ipsum id explicabo
                             laboriosam, laudantium eum iste aspernatur perferendis harum repellat quidem molestiae provident
                             aliquid accusantium nulla! Excepturi?</p>
@@ -50,11 +50,17 @@
         </div>
 
         <div class="row">
-            1<div class="col-md-12">
+            <div class="col-md-12">
                 <div class="logo_container">
-                 <a href="#"><img class="logo_1" src="../Basic-Portfolio-2/Assets/linkedin_logo_round.png" alt=""></a>
-                 <a href="#"><img class="logo_2 logo-2" src="../Basic-Portfolio-2/Assets/gitlab_logo.png" alt=""></a>
-                 <a href="#"><img class="logo_3" src="../Basic-Portfolio-2/Assets/github_logo_2.png" alt=""></a>
+                    <a href="#">
+                        <img class="logo_1" src="../Basic-Portfolio-2/Assets/linkedin_logo_round.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img class="logo_2 logo-2" src="../Basic-Portfolio-2/Assets/gitlab_logo.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img class="logo_3" src="../Basic-Portfolio-2/Assets/github_logo_2.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
