--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,24 @@
             </button>
         </nav>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row portfolio-image"> <img src="http://via.placeholder.com/200x200" alt=""></div>
+                <div class="row portfolio-image"> <img src="http://via.placeholder.com/200x200" alt=""></div>
+                <div class="row portfolio-image"> <img src="http://via.placeholder.com/200x200" alt=""></div>
+                <div class="row portfolio-image"> <img src="http://via.placeholder.com/200x200" alt=""></div>
+            </div>
+            <div class="col-md-6">
+                <div class="row portfolio-image"><img src="http://via.placeholder.com/200x200" alt=""></div>
+                <div class="row portfolio-image"><img src="http://via.placeholder.com/200x200" alt=""></div>
+                <div class="row portfolio-image"><img src="http://via.placeholder.com/200x200" alt=""></div>
+                <div class="row portfolio-image"><img src="http://via.placeholder.com/200x200" alt=""></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
