--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Me</title>
 
 </head>
@@ -17,7 +18,7 @@
 <body>
     <div class="wrapper">
         <nav class="navbar navbar-expand-lg navbar-light  ">
-            <a class="navbar-brand " href="#">Cortland Taylor</a>
+            <a class="navbar-brand " href="#">Cortland | Programming Student</a>
             <ul class="navbar-nav ml-auto"></ul>
             <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
